--- a/webroot/mobile/html/jifen/html/register.html
+++ b/webroot/mobile/html/jifen/html/register.html
@@ -43,7 +43,7 @@
                 </div>
             </div>
             <div class="tips" style="display: none;">
-                <div class="tips_des">
+                <div class="tips_des ft0">
                     <h1 id="msg" style="color: #525151;" class="warning">系统错误</h1>
                     <p id="chargeTips"></p>
                     <span class="closed"></span>
