--- a/webroot/mobile/html/jifen/html/help.html
+++ b/webroot/mobile/html/jifen/html/help.html
@@ -34,7 +34,7 @@
                                 <p>3)过期代金券自动作废，不补不退。</p>
                                 <p>4)代金券一经兑换，不退不换。</p>
                                 <p>5)代金券支付金额不开具发票。</p>
-                                <p>6)更多请咨询客服电话95016789。</p>
+                                <p>6)更多请咨询客服电话0755-29637465。</p>
                             </div>
                         </div>
                     </li>
@@ -50,13 +50,13 @@
                                 <p>3)过期代金券自动作废，不补不退。</p>
                                 <p>4)代金券一经兑换，不退不换。</p>
                                 <p>5)代金券支付金额不开具发票。</p>
-                                <p>6)更多请咨询客服电话95016789。</p>
+                                <p>6)更多请咨询客服电话0755-29637465。</p>
                             </div>
                         </div>
                     </li>
                     <li>
                         <div class="title inner flex">
-                            <h3>3.考拉积分相关说明</h3>
+                            <h3>3.可乐积分相关说明</h3>
                             <i class="arrow"></i>
                         </div>
                         <div class="con inner">
@@ -66,7 +66,7 @@
                                 <p>3)过期代金券自动作废，不补不退。</p>
                                 <p>4)代金券一经兑换，不退不换。</p>
                                 <p>5)代金券支付金额不开具发票。</p>
-                                <p>6)更多请咨询客服电话95016789。</p>
+                                <p>6)更多请咨询客服电话0755-29637465。</p>
                             </div>
                         </div>
                     </li>
@@ -82,7 +82,7 @@
                                 <p>3)过期代金券自动作废，不补不退。</p>
                                 <p>4)代金券一经兑换，不退不换。</p>
                                 <p>5)代金券支付金额不开具发票。</p>
-                                <p>6)更多请咨询客服电话95016789。</p>
+                                <p>6)更多请咨询客服电话0755-29637465。</p>
                             </div>
                         </div>
                     </li>
@@ -98,7 +98,7 @@
                                 <p>3)过期代金券自动作废，不补不退。</p>
                                 <p>4)代金券一经兑换，不退不换。</p>
                                 <p>5)代金券支付金额不开具发票。</p>
-                                <p>6)更多请咨询客服电话95016789。</p>
+                                <p>6)更多请咨询客服电话0755-29637465。</p>
                             </div>
                         </div>
                     </li>
@@ -114,7 +114,7 @@
                                 <p>3)过期代金券自动作废，不补不退。</p>
                                 <p>4)代金券一经兑换，不退不换。</p>
                                 <p>5)代金券支付金额不开具发票。</p>
-                                <p>6)更多请咨询客服电话95016789。</p>
+                                <p>6)更多请咨询客服电话0755-29637465。</p>
                             </div>
                         </div>
                     </li>
@@ -130,7 +130,7 @@
                                 <p>3)过期代金券自动作废，不补不退。</p>
                                 <p>4)代金券一经兑换，不退不换。</p>
                                 <p>5)代金券支付金额不开具发票。</p>
-                                <p>6)更多请咨询客服电话95016789。</p>
+                                <p>6)更多请咨询客服电话0755-29637465。</p>
                             </div>
                         </div>
                     </li>
@@ -146,7 +146,7 @@
                                 <p>3)过期代金券自动作废，不补不退。</p>
                                 <p>4)代金券一经兑换，不退不换。</p>
                                 <p>5)代金券支付金额不开具发票。</p>
-                                <p>6)更多请咨询客服电话95016789。</p>
+                                <p>6)更多请咨询客服电话0755-29637465。</p>
                             </div>
                         </div>
                     </li>
@@ -157,7 +157,7 @@
             $('.title').on('click', function () {
                 $(this).siblings().toggleClass('show');
                 $(this).children('.arrow').toggleClass('scale')
-            })
+            });
         </script>
     </body>
 </html>
