--- a/webroot/mobile/html/activity-enroll_more.html
+++ b/webroot/mobile/html/activity-enroll_more.html
@@ -35,7 +35,21 @@
 				<ul class="ulblock">
 					<li class="flex">
 						<i class="iconfont ico">&#xe6a8;</i>
-						<div class="r_info">
+						<div class="r_info flex">
+							<div class="avatar">
+								<img src="../images/home-pic1.png"/>
+								<i class="v"></i>
+							</div>
+							<div class="userinfo">
+								<h3 class="name">杨攸宁 <span class="job">人哒代表</span></h3>
+								<div class="commpany">此处是公司名称</div>
+								<div class="bominfo"><i class="iconfont color-items">&#xe6aa;</i>已选：习大大、奥巴马</div>
+							</div>
+						</div>
+					</li>
+					<li class="flex">
+						<i class="iconfont ico">&#xe6a8;</i>
+						<div class="r_info flex">
 							<div class="avatar">
 								<img src="../images/home-pic1.png"/>
 							</div>
@@ -47,7 +61,7 @@
 					</li>
 					<li class="flex">
 						<i class="iconfont ico">&#xe6a8;</i>
-						<div class="r_info">
+						<div class="r_info flex">
 							<div class="avatar">
 								<img src="../images/home-pic1.png"/>
 							</div>
@@ -59,19 +73,7 @@
 					</li>
 					<li class="flex">
 						<i class="iconfont ico">&#xe6a8;</i>
-						<div class="r_info">
-							<div class="avatar">
-								<img src="../images/home-pic1.png"/>
-							</div>
-							<div class="userinfo">
-								<h3 class="name">杨攸宁</h3>
-								<div class="bominfo"><i class="iconfont color-items">&#xe6aa;</i>已选：习大大、奥巴马</div>
-							</div>
-						</div>
-					</li>
-					<li class="flex">
-						<i class="iconfont ico">&#xe6a8;</i>
-						<div class="r_info">
+						<div class="r_info flex">
 							<div class="avatar">
 								<img src="../images/home-pic1.png"/>
 							</div>
