--- a/webroot/mobile/html/jifen/html/register.html
+++ b/webroot/mobile/html/jifen/html/register.html
@@ -64,7 +64,7 @@
                     return false;
                 }
                 $that.addClass('noTap');
-                $.func.getVcode($('#username').val());
+                $.func.getVcode($('#username').val(), 1);
                 $that.addClass('validebg').html('倒计时60s');
                 var second = 60;
                 var timer = setInterval(function () {
