--- a/webroot/mobile/html/jifen/html/home.html
+++ b/webroot/mobile/html/jifen/html/home.html
@@ -109,11 +109,11 @@
         </div>
         <script type="text/html" id="tpl">
             <div link="{#link#}" class="product" style="width: 33.3%;float: left;">
-                <dl>
-                    <dt><img src="{#img#}"/></dt>
-                    <dd class="items_price">{#exchangePrice#} 换呗</dd>
-                    <dd class='productName'>{#productName#}</dd>
-                </dl>
+                <div class="dl">
+                    <div class="dt"><img src="{#img#}"/></div>
+                    <div class="items_price dd">{#exchangePrice#} 换呗</div>
+                    <div class='productName dd'>{#productName#}</div>
+                </div>
             </div>
         </script>
         <script type="text/html" id="mtpl">
