--- a/webroot/mobile/html/jifen/html/home.html
+++ b/webroot/mobile/html/jifen/html/home.html
@@ -7,16 +7,16 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
         <title>换积分了-个人主页</title>
-        <link rel="stylesheet" type="text/css" href="../css/basic.css"/>
-        <link rel="stylesheet" type="text/css" href="../css/style.css"/>
-        <script src="../js/zepto.min.js" type="text/javascript" charset="utf-8"></script>
-        <script src="../js/style.js" type="text/javascript" charset="utf-8"></script>
+        <link rel="stylesheet" type="text/css" href="../css/basic.css?t=1"/>
+        <link rel="stylesheet" type="text/css" href="../css/style.css?t=1"/>
+        <script src="../js/zepto.min.js?t=1" type="text/javascript" charset="utf-8"></script>
+        <script src="../js/style.js?t=1" type="text/javascript" charset="utf-8"></script>
         <script type="text/javascript" src="../js/des.js"></script>
     </head>
     <body>
         <header style="height: 173px;padding: 0;">
             <div class="inner">
-                <h1 class="home_head" style="font-size: 22px;"><span class='title'>换积分了</span><a href="javascript:location.href='login.html?channelId='+$.func.getUrlParam('channelId')" class="quit_login fr">去登录</a></h1>
+                <h1 class="home_head" style="font-size: 22px;"><span class='title'>换积分了</span><a href="javascript:location.href='login.html?channelId='+$.func.getUrlParam('channelId')" class="quit_login fr">登录</a></h1>
                 <div class="home_user_info">
                     <span class="imginfo"><img src="../images/tx.png" id="avatar" style="width: 76px; height: 75px;"/></span>
                     <div class="home_head_info">
