--- a/webroot/mobile/html/my-chat_list.html
+++ b/webroot/mobile/html/my-chat_list.html
@@ -29,7 +29,7 @@
 								<i class="num">2</i>
 							</div>
 							<div class='l_text'>
-								<h3 class="title">杨俊 <span>宁和资本 / 投资人</span></h3>
+								<h3 class="title flex"><i>杨俊</i> <span class="job line1">宁和资本 / 投资人好的，星期五下午见星期五下午见期五下午见</span></h3>
 								<span class="cont"><i class='iconfont'>&#xe6aa;</i>好的，星期五下午见</span>
 							</div>
 						</div>
