--- a/webroot/mobile/html/jifen/html/exchange_cash.html
+++ b/webroot/mobile/html/jifen/html/exchange_cash.html
@@ -5,7 +5,7 @@
         <meta name="format-detection" content="telephone=no, email=no" />
         <meta name="renderer" content="webkit">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+      	<meta name="viewport" content="width=device-width,initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
         <title>换积分了-兑换现金</title>
         <link rel="stylesheet" type="text/css" href="../css/basic.css"/>
         <link rel="stylesheet" type="text/css" href="../css/style.css"/>
