--- a/webroot/mobile/html/jifen/html/home.html
+++ b/webroot/mobile/html/jifen/html/home.html
@@ -5,7 +5,7 @@
         <meta name="format-detection" content="telephone=no, email=no" />
         <meta name="renderer" content="webkit">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+        <meta name="viewport" content="width=device-width,initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
         <title>换积分了-个人主页</title>
         <link rel="stylesheet" type="text/css" href="../css/basic.css?t=2"/>
         <link rel="stylesheet" type="text/css" href="../css/style.css?t=2"/>
@@ -108,7 +108,7 @@
             </div>
         </div>
         <script type="text/html" id="tpl">
-            <div link="{#link#}" class="product" style="width: 33.3%;float: left;">
+            <div link="{#link#}" class="product">
                 <div class="dl">
                     <div class="dt"><img src="{#img#}"/></div>
                     <div class="items_price dd">{#exchangePrice#} 换呗</div>
