--- a/webroot/mobile/html/my-chat.html
+++ b/webroot/mobile/html/my-chat.html
@@ -69,10 +69,14 @@
 			<div style="height:2.8rem"></div>
 			<div class="chatbottom">
 				<div class="chatcon flex flex_jusitify">
-					<input type="text" placeholder="消息……" />
+					<textarea class="sub-text"></textarea>
 					<button>发送</button>
 				</div>
 			</div>
+			<div class="over-meet">
+				<span>约见<br />结束</span>
+			</div>
+			
 			<script type="text/javascript">
 					
 			</script>
