--- a/webroot/mobile/html/activity-enroll_more.html
+++ b/webroot/mobile/html/activity-enroll_more.html
@@ -29,7 +29,7 @@
 				<span class="seachbtn">搜索</span>
 			</div>
 			<div class="enrolled innercon">
-				<span>已选：习大大、奥巴马</span>
+				<div>已选：<span class="choosed">习大大 <i class="iconfont">&#xe67b;</i></span> <span class="choosed">奥巴马  <i class="iconfont">&#xe67b;</i></span></div>
 			</div>
 			<div class="enrolled_choose">
 				<ul class="ulblock">
