--- a/webroot/mobile/html/meet.html
+++ b/webroot/mobile/html/meet.html
@@ -87,15 +87,15 @@
 				
 			<div class="dk">
 				<div class="m_title_des  bd1">
-					<h3>为您推荐</h3>
+					<a class="title" href="#this">为您推荐 <i class="more iconfont fr rmore">&#xe667;</i></a>
 				</div>
 				<ul id="items">
-					<li><a href="#this"><img src="../images/dk.jpg"/><span>8人见过</span></a></li>
-					<li><a href="#this"><img src="../images/dk.jpg"/><span>8人见过</span></a></li>
-					<li><a href="#this"><img src="../images/dk.jpg"/><span>8人见过</span></a></li>
-					<li><a href="#this"><img src="../images/dk.jpg"/><span>8人见过</span></a></li>
-					<li><a href="#this"><img src="../images/dk.jpg"/><span>8人见过</span></a></li>
-					<li><a href="#this"><img src="../images/dk.jpg"/><span>8人见过</span></a></li>
+					<li><a href="#this" class="meet-con"><img src="../images/dk.jpg"/><span>8人见过</span></a></li>
+					<li><a href="#this" class="meet-con"><img src="../images/dk.jpg"/><span>8人见过</span></a></li>
+					<li><a href="#this" class="meet-con"><img src="../images/dk.jpg"/><span>8人见过</span></a></li>
+					<li><a href="#this" class="meet-con"><img src="../images/dk.jpg"/><span>8人见过</span></a></li>
+					<li><a href="#this" class="meet-con"><img src="../images/dk.jpg"/><span>8人见过</span></a></li>
+					<li><a href="#this" class="meet-con"><img src="../images/dk.jpg"/><span>8人见过</span></a></li>
 				</ul>
 			</div>
 			<div class="h2"></div>
