--- a/webroot/mobile/html/meet.html
+++ b/webroot/mobile/html/meet.html
@@ -33,7 +33,7 @@
 					<i class="iconfont">&#xe602;</i>
 					<input type="text" placeholder="搜索" />
 				</div>
-				<div class="rico"><i class="iconfont">&#xe6ab;</i><span class="num">5</span></div>
+				<div class="rico"><i class="iconfont">&#xe6ab;</i><span class="num"></span></div>
 			</div>
 			<div class="a-banner" >
 				<ul class="pic-list-container" id="imgList">
@@ -87,7 +87,7 @@
 				
 			<div class="dk">
 				<div class="m_title_des  bd1">
-					<a class="title" href="#this">为您推荐 <i class="more iconfont fr rmore">&#xe667;</i></a>
+					<a class="title" href="#this">为您推荐 <div class="fr more"> 查看更多<i class="iconfont rmore">&#xe667;</i></div></a>
 				</div>
 				<ul id="items">
 					<li><a href="#this" class="meet-con"><img src="../images/dk.jpg"/><span>8人见过</span></a></li>
