--- a/webroot/mobile/html/jifen/html/allgoods.html
+++ b/webroot/mobile/html/jifen/html/allgoods.html
@@ -25,6 +25,13 @@
                 </div>
             </div>
         </div>
+        <div class="tips" style="display: none;">
+            <div class="tips_des">
+                <h1 id="msg" style="color: #525151;" class="warning">系统错误</h1>
+                <p id="chargeTips"></p>
+                <span class="closed"></span>
+            </div>
+        </div>
         <script type="text/html" id="tpl">
             <div link="{#link#}" class="product" style="width: 33.3%;float: left;">
                 <div class="dl">
