--- a/webroot/mobile/html/jifen/html/help.html
+++ b/webroot/mobile/html/jifen/html/help.html
@@ -24,49 +24,34 @@
                 <ul>
                     <li>
                         <div class="title inner flex">
-                            <h3>1.代金券使用规则说明</h3>
+                            <h3>1.流量充值支持哪些地区？</h3>
                             <i class="arrow"></i>
                         </div>
                         <div class="con inner">
                             <div class="pd10">
-                                <p>1)代金券有效期不小于90天，具体以账户内的代金券显示的有效期为准，请您在有效期内使用。</p>
-                                <p>2)到金券可分多次使用，每次使用不限金额。</p>
-                                <p>3)过期代金券自动作废，不补不退。</p>
-                                <p>4)代金券一经兑换，不退不换。</p>
-                                <p>5)代金券支付金额不开具发票。</p>
-                                <p>6)更多请咨询客服电话0755-29637465。</p>
+                                <p>目前流量充值只支持全国流量包，当月生效，月底失效。</p>
                             </div>
                         </div>
                     </li>
                     <li>
                         <div class="title inner flex">
-                            <h3>2.代金券支付说明</h3>
+                            <h3>2.什么是省内流量，什么是全国流量？</h3>
                             <i class="arrow"></i>
                         </div>
                         <div class="con inner">
                             <div class="pd10">
-                                <p>1)代金券有效期不小于90天，具体以账户内的代金券显示的有效期为准，请您在有效期内使用。</p>
-                                <p>2)到金券可分多次使用，每次使用不限金额。</p>
-                                <p>3)过期代金券自动作废，不补不退。</p>
-                                <p>4)代金券一经兑换，不退不换。</p>
-                                <p>5)代金券支付金额不开具发票。</p>
-                                <p>6)更多请咨询客服电话0755-29637465。</p>
+                                <p>省内流量指该流量只可在手机号码归属地范围内使用，全国流量是指该流量全国范围都可以使用。</p>
                             </div>
                         </div>
                     </li>
                     <li>
                         <div class="title inner flex">
-                            <h3>3.可乐积分相关说明</h3>
+                            <h3>3.我订购的流量套餐可以次月使用吗？</h3>
                             <i class="arrow"></i>
                         </div>
                         <div class="con inner">
                             <div class="pd10">
-                                <p>1)代金券有效期不小于90天，具体以账户内的代金券显示的有效期为准，请您在有效期内使用。</p>
-                                <p>2)到金券可分多次使用，每次使用不限金额。</p>
-                                <p>3)过期代金券自动作废，不补不退。</p>
-                                <p>4)代金券一经兑换，不退不换。</p>
-                                <p>5)代金券支付金额不开具发票。</p>
-                                <p>6)更多请咨询客服电话0755-29637465。</p>
+                                <p>当月订购的流量套餐仅支持当月使用。</p>
                             </div>
                         </div>
                     </li>
