--- a/webroot/mobile/html/jifen/html/reset_pwd.html
+++ b/webroot/mobile/html/jifen/html/reset_pwd.html
@@ -56,7 +56,7 @@
             });
             $('#getvalide').click(function () {
                 if($('#username').val() == ''){
-                    alert('请输入手机号码');
+                    $.func.alert('请输入手机号码');
                     return;
                 }
                 var $that = $(this);
