--- a/webroot/mobile/html/jifen/html/help.html
+++ b/webroot/mobile/html/jifen/html/help.html
@@ -24,12 +24,23 @@
                 <ul>
                     <li>
                         <div class="title inner flex">
-                            <h3>1.流量充值支持哪些地区？</h3>
+                            <h3>1.&nbsp;&nbsp;流量充值相关说明</h3>
                             <i class="arrow"></i>
                         </div>
                         <div class="con inner">
                             <div class="pd10">
-                                <p>目前流量充值只支持全国流量包，当月生效，月底失效。</p>
+                            	<div class="sub-title"><i class="flag">1)&nbsp;&nbsp;</i>流量充值长时间不到账怎么办？</div>
+                                <div class="sub-title con-cont clearfix">
+                                	<div class="imgmark fl"><img src="../images/da.png"/></div>
+                                	<p class="fl">代金券有效期不小于90天，具体以账户内的代金券显示的有效期为准，请您在有效期内使用。代金券有效期不小于90天，具体以账户内的代金券显示的有效期为准，请您在有效期内使用。代金券有效期不小于90天，具体以账户内的代金券显示的有效期为准，请您在有效期内使用。</p>
+                                </div>
+                            </div>
+                            <div class="pd10">
+                            	<div class="sub-title"><i class="flag">1)&nbsp;&nbsp;</i>流量充值长时间不到账怎么办？</div>
+                                <div class="sub-title con-cont clearfix">
+                                	<div class="imgmark fl"><img src="../images/da.png"/></div>
+                                	<p class="fl">代金券有效期不小于90天，具体以账户内的代金券显示的有效期为准，请您在有效期内使用。代金券有效期不小于90天，具体以账户内的代金券显示的有效期为准，请您在有效期内使用。代金券有效期不小于90天，具体以账户内的代金券显示的有效期为准，请您在有效期内使用。</p>
+                                </div>
                             </div>
                         </div>
                     </li>
