--- a/webroot/mobile/html/my-chat.html
+++ b/webroot/mobile/html/my-chat.html
@@ -25,32 +25,24 @@
 		</header>
 		
 		<div class="wraper">
-			<!--<div class="h20">
-				
-			</div>-->
-			<div class="dialogue">
+			<div class="dialogue chatlist">
 				<ul>
-					<div class="desc">
-						<time>12:17</time>
-					</div>
-					<li class="fr">
-						<div class="flex chatbox">
+					<li><div class="desc"><time>12:17</time></div></li>
+					<li>
+						<div class="flex chatbox fr">
 							<div class="chat_text">
 								<span>我已发出约见，快来确认吧。<br /><a href="#this">查看详情</a></span>
 							</div>
-							<div class="avatar">
+							<a class="avatar ablock">
 								<img src="../images/nv01.png"/>
-							</div>
+							</a>
 						</div>
 					</li>
-					<div class="desc"><span>请问可以约在周五吗？</span></div>
-					<div class="desc"><time>12:17</time></div>
-					<div class="desc"><span>你已同意，可以开始聊天啦~~</span></div>
-					<li class="fl">
-						<div class="flex chatbox">
-							<div class="avatar">
+					<li>
+						<div class="flex chatbox fl">
+							<a class="avatar ablock" href="#this">
 								<img src="../images/nv05.png"/>
-							</div>
+							</a>
 							<div class="chat_text">
 								<span>我已约见你发布的话题【寻找一年期保底定增项目！】期待您的回应！<br />
 									<a href="#this">拒绝</a> <a href="#this">接受</a>
@@ -58,6 +50,11 @@
 							</div>
 						</div>
 					</li>
+					<li><div class="desc"><span>请问可以约在周五吗？</span></div></li>
+					<li><div class="desc"><time>12:17</time></div></li>
+					<li><div class="desc"><span>你已同意，可以开始聊天啦~~</span></div></li>
+				
+					<li><div class="desc"><time>12:17</time></div></li>
 				</ul>
 			</div>
 			
