--- a/webroot/mobile/html/jifen/html/help.html
+++ b/webroot/mobile/html/jifen/html/help.html
@@ -24,22 +24,64 @@
                 <ul>
                     <li>
                         <div class="title inner flex">
-                            <h3>1.&nbsp;&nbsp;流量充值相关说明</h3>
+                            <h3>1.&nbsp;&nbsp;流量充值相关问题说明</h3>
                             <i class="arrow"></i>
                         </div>
                         <div class="con inner">
                             <div class="pd10">
-                            	<div class="sub-title"><i class="flag">1)&nbsp;&nbsp;</i>流量充值长时间不到账怎么办？</div>
+                                <div class="sub-title"><i class="flag">1)&nbsp;&nbsp;</i>流量充值支持哪些地区？？</div>
                                 <div class="sub-title con-cont clearfix">
-                                	<div class="imgmark fl"><img src="../images/da.png"/></div>
-                                	<p class="fl">代金券有效期不小于90天，具体以账户内的代金券显示的有效期为准，请您在有效期内使用。代金券有效期不小于90天，具体以账户内的代金券显示的有效期为准，请您在有效期内使用。代金券有效期不小于90天，具体以账户内的代金券显示的有效期为准，请您在有效期内使用。</p>
+                                    <div class="imgmark fl"><img src="../images/da.png"/></div>
+                                    <p class="fl">目前流量充值只支持全国流量包，当月生效，月底失效。</p>
                                 </div>
                             </div>
                             <div class="pd10">
-                            	<div class="sub-title"><i class="flag">1)&nbsp;&nbsp;</i>流量充值长时间不到账怎么办？</div>
+                                <div class="sub-title"><i class="flag">2)&nbsp;&nbsp;</i>什么是省内流量，什么是全国流量？</div>
                                 <div class="sub-title con-cont clearfix">
-                                	<div class="imgmark fl"><img src="../images/da.png"/></div>
-                                	<p class="fl">代金券有效期不小于90天，具体以账户内的代金券显示的有效期为准，请您在有效期内使用。代金券有效期不小于90天，具体以账户内的代金券显示的有效期为准，请您在有效期内使用。代金券有效期不小于90天，具体以账户内的代金券显示的有效期为准，请您在有效期内使用。</p>
+                                    <div class="imgmark fl"><img src="../images/da.png"/></div>
+                                    <p class="fl">省内流量指该流量只可在手机号码归属地范围内使用，全国流量是指该流量全国范围都可以使用。</p>
+                                </div>
+                            </div>
+                            <div class="pd10">
+                                <div class="sub-title"><i class="flag">3)&nbsp;&nbsp;</i>我订购的流量套餐可以次月使用吗？</div>
+                                <div class="sub-title con-cont clearfix">
+                                    <div class="imgmark fl"><img src="../images/da.png"/></div>
+                                    <p class="fl">当月订购的流量套餐仅支待当月使用。</p>
+                                </div>
+                            </div>
+                            <div class="pd10">
+                                <div class="sub-title"><i class="flag">4)&nbsp;&nbsp;</i>我订购了流量，我本身也有流量，那么这个是怎么扣？</div>
+                                <div class="sub-title con-cont clearfix">
+                                    <div class="imgmark fl"><img src="../images/da.png"/></div>
+                                    <p class="fl">根据运营商规定：优先消耗订购流量，然后再进行套餐流量消耗。</p>
+                                </div>
+                            </div>
+                            <div class="pd10">
+                                <div class="sub-title"><i class="flag">5)&nbsp;&nbsp;</i>我订购的流量已经收到短信，但实际还没到账？</div>
+                                <div class="sub-title con-cont clearfix">
+                                    <div class="imgmark fl"><img src="../images/da.png"/></div>
+                                    <p class="fl">可能是因为运营商系统差异问题，少量客户会存在到账比短信偏快的情况，不过24小时内一定会到账，可登录网上营业厅进行确认。</p>
+                                </div>
+                            </div>
+                            <div class="pd10">
+                                <div class="sub-title"><i class="flag">6)&nbsp;&nbsp;</i>流量充值长时间不到账怎么办？</div>
+                                <div class="sub-title con-cont clearfix">
+                                    <div class="imgmark fl"><img src="../images/da.png"/></div>
+                                    <p class="fl">月初、月末充值高峰时段，用户较多，到账时间有一定的延迟,若是长时间不到账，请拨打客服热线：0755-29637465，邮箱 flow@toprays.com</p>
+                                </div>
+                            </div>
+                            <div class="pd10">
+                                <div class="sub-title"><i class="flag">7)&nbsp;&nbsp;</i>流量充值失败怎么办？</div>
+                                <div class="sub-title con-cont clearfix">
+                                    <div class="imgmark fl"><img src="../images/da.png"/></div>
+                                    <p class="fl">如果充值高峰或者系统升级，会有个别订单失败，我们会及时为用户办理退款，款项会原路返回用户支付时所用的账号内，一般3-5个工作日到账，如遇节假日延后，请您及时查询账户信息。如有疑问请拨打客服热线：0755-29637465 邮箱：flow@toprays.com。</p>
+                                </div>
+                            </div>
+                            <div class="pd10">
+                                <div class="sub-title"><i class="flag">8)&nbsp;&nbsp;</i>流量充值成功无短信通知怎么办？</div>
+                                <div class="sub-title con-cont clearfix">
+                                    <div class="imgmark fl"><img src="../images/da.png"/></div>
+                                    <p class="fl">请您发送短信或电话至运营商查询，中国移动发送cx11到10086或者登录移动网上营业厅查询套餐明细；中国联通发送CXLL到10010或登录联通网上营业厅查询套餐明细;中国电信发送CXLL或108到10001或登录电信网上营业厅查询套餐明细；如有疑问请拨打客服热线：0755-29637465 邮箱：flow@toprays.com。</p>
                                 </div>
                             </div>
                         </div>
